# news_embedder

./: .gitignore  LICENSE  MANIFEST.in  README.md  Road Map.txt  assess.txt  conda_requirements.txt  configuration.py  embedding.py  event.py  history_line.py  named_entities.py  overhelm.py  pip_requirements.txt  pyproject.toml  run.py  runner.py  sentiment.py  setup.py  tempora.py  tests.py  tokenisation.py
data/: params.json
dataCollection/: prices.py
environments/: hazard!.txt  hazard_deeppavlov.txt  hazard_pattern.txt  hazard_pycorenlp.txt  hazard_sister.txt  hazard_textblob.txt  hazard_use.txt
environments_install/: hazard_flair.txt  hazard_nltk.txt  hazard_spacy.txt
examples/: models.py  run.py
mass/: embedding.py  ner.py  sentiment.py
mass/low_level/: embedding_flair.py  embedding_sister.py  embedding_spacy.py  embedding_use.py  ner_deeppavlov.py  ner_deeppavlov_conl.py  ner_deeppavlov_conl_bert.py  ner_deeppavlov_onto.py  ner_flair.py  ner_nltk_stanford.py  ner_spacy.py  ner_spacy_lg.py  ner_spacy_sm.py  sentiment_flair.py  sentiment_nltk.py  sentiment_pattern.py  sentiment_textblob.py
news_embedder/: __main__.py  configuration.py  overhelm.py
news_embedder/cli/: land.py
news_embedder/data/: gained.csv  params.json  source.csv
news_embedder/mass/: embedding.py  ner.py  sentiment.py
news_embedder/settings/: adds.json  data.json  virtual.json
old/: embedding_word_old.py
old/old/: ner_deeppavlov_conl_o.py  ner_deeppavlov_onto_bert_o.py  ner_flair_o.py  ner_spacy_lg_o.py  ner_spacy_md_o.py
solo/: named_entities.py  sentiment.py
(+20 files in other folders)
